Make sure filterable grid column have enough space so that button doesnt overlap
[4.5.x]

ERM39321

--- a/resources/stylesheet/data/grid.less
+++ b/resources/stylesheet/data/grid.less
@@ -55,6 +55,9 @@
 						font-size: 1em;
 						margin-right: 4px;
 						white-space: break-spaces;
+						&.filterable {
+							margin-right: 23px;
+						}
 						a {
 							white-space: break-spaces;
 						}
